--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Wallet</string>
     <string name="action_settings">Settings</string>
     <string name="action_addClock">Add Clock</string>
+    <string name="action_edit">Edit</string>
+    <string name="action_delete">Delete</string>
+
     <string name="menu_1">All</string>
     <string name="menu_2">Detail</string>
     <string name="menu_3">Record</string>
