update & add alarm management

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_addClock">Add Clock</string>
     <string name="action_edit">Edit</string>
+    <string name="action_save">Save</string>
     <string name="action_delete">Delete</string>
     <string name="action_finish">Finish</string>
     <string name="action_cancel">Cancel</string>
@@ -41,9 +42,12 @@
 
     <string name="activity_clock_weekday">Weekday</string>
     <string name="title_activity_record">RecordActivity</string>
+    <string name="title_activity_clock">Clock</string>
 
     <string name="alert_delete_record">Delete Record</string>
+    <string name="alert_delete_clock">Delete Clock</string>
     <string name="alert_delete_record_info">Are you sure you want to delete record?</string>
+    <string name="alert_delete_clock_info">Are you sure you want to delete clock?</string>
 
     <string name="yes">Yes</string>
     <string name="no">No</string>
